--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,18 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x266aaaa7290>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "seed_value = 16\n",
+    "seed_value = 123\n",
     "np.random.seed(seed_value)\n",
     "torch.manual_seed(seed_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +138,7 @@
     "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
-    "    patience = 2000\n",
+    "    patience = 20\n",
     "    wait = 0\n",
     "    for epoch in range(12000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize(tensor):\n",
-    "    mean = torch.mean(tensor, dim=0)\n",
-    "    std = torch.std(tensor, dim=0)\n",
-    "    std_zeros = std == 0\n",
-    "    std[std_zeros] = 1\n",
-    "    normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
-    "    return normalized_tensor"
+    "# def normalize(tensor):\n",
+    "#     mean = torch.mean(tensor, dim=0)\n",
+    "#     std = torch.std(tensor, dim=0)\n",
+    "#     std_zeros = std == 0\n",
+    "#     std[std_zeros] = 1\n",
+    "#     normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
+    "#     return normalized_tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,14 +216,18 @@
     "        for i in range(len(feature_engineer)):\n",
     "            train_input_tensor[:, i] = feature_engineer[i](train_input_tensor[:, i])\n",
     "        train_input_tensor = torch.Tensor(train_input_tensor)\n",
-    "        train_input_tensor = normalize(train_input_tensor)\n",
+    "        # train_mean = torch.mean(train_input_tensor, dim=0)\n",
+    "        # train_std = torch.std(train_input_tensor, dim=0)\n",
+    "        # std_zeros = train_std == 0\n",
+    "        # train_std[std_zeros] = 1\n",
+    "        # train_input_tensor = (train_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "        # test_input_tensor\n",
     "        test_input_tensor = test_inputs_df[chosen_features].to_numpy()\n",
     "        for i in range(len(feature_engineer)):\n",
     "            test_input_tensor[:, i] = feature_engineer[i](test_input_tensor[:, i])\n",
     "        test_input_tensor = torch.Tensor(test_input_tensor)\n",
-    "        test_input_tensor = normalize(test_input_tensor)\n",
+    "        # test_input_tensor = (test_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "        # output tensor\n",
     "        targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
@@ -251,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
