--- a/MLP_117_cv.ipynb
+++ b/MLP_117_cv.ipynb
@@ -124,7 +124,7 @@
     "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
-    "    patience = 1000\n",
+    "    patience = 20\n",
     "    wait = 0\n",
     "    for epoch in range(10000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
@@ -149,13 +149,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize(tensor):\n",
-    "    mean = torch.mean(tensor, dim=0)\n",
-    "    std = torch.std(tensor, dim=0)\n",
-    "    std_zeros = std == 0\n",
-    "    std[std_zeros] = 1\n",
-    "    normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
-    "    return normalized_tensor"
+    "# def normalize(tensor):\n",
+    "#     mean = torch.mean(tensor, dim=0)\n",
+    "#     std = torch.std(tensor, dim=0)\n",
+    "#     std_zeros = std == 0\n",
+    "#     std[std_zeros] = 1\n",
+    "#     normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
+    "#     return normalized_tensor"
    ]
   },
   {
@@ -174,12 +174,18 @@
     "            # train_input_tensor\n",
     "            train_input_tensor = train_inputs_df.iloc[:, 1:].to_numpy()\n",
     "            train_input_tensor = torch.Tensor(train_input_tensor)\n",
-    "            train_input_tensor = normalize(train_input_tensor)\n",
+    "            # train_input_tensor = normalize(train_input_tensor)\n",
+    "            train_mean = torch.mean(train_input_tensor, dim=0)\n",
+    "            train_std = torch.std(train_input_tensor, dim=0)\n",
+    "            std_zeros = train_std == 0\n",
+    "            train_std[std_zeros] = 1\n",
+    "            train_input_tensor = (train_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "            # test_input_tensor\n",
     "            test_input_tensor = test_inputs_df.iloc[:, 1:].to_numpy()\n",
     "            test_input_tensor = torch.Tensor(test_input_tensor)\n",
-    "            test_input_tensor = normalize(test_input_tensor)\n",
+    "            # test_input_tensor = normalize(test_input_tensor)\n",
+    "            test_input_tensor = (test_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "            # output tensor\n",
     "            targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
