--- a/MLP_117.ipynb
+++ b/MLP_117.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed_value = 16\n",
+    "seed_value = 123\n",
     "np.random.seed(seed_value)\n",
     "torch.manual_seed(seed_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
     "    optimizer = optim.Adam(model.parameters())\n",
     "    \n",
     "    best_loss = float('inf')\n",
-    "    patience = 2000\n",
+    "    patience = 20\n",
     "    wait = 0\n",
     "    for epoch in range(12000):\n",
     "        loss = criterion(model(inputs_tensor), outputs_tensor)\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize(tensor):\n",
-    "    mean = torch.mean(tensor, dim=0)\n",
-    "    std = torch.std(tensor, dim=0)\n",
-    "    std_zeros = std == 0\n",
-    "    std[std_zeros] = 1\n",
-    "    normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
-    "    return normalized_tensor"
+    "# def normalize(tensor):\n",
+    "#     mean = torch.mean(tensor, dim=0)\n",
+    "#     std = torch.std(tensor, dim=0)\n",
+    "#     std_zeros = std == 0\n",
+    "#     std[std_zeros] = 1\n",
+    "#     normalized_tensor = (tensor - mean) / std.unsqueeze(0)\n",
+    "#     return normalized_tensor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,12 +187,18 @@
     "    # train_input_tensor\n",
     "    train_input_tensor = train_inputs_df.iloc[:, 1:].to_numpy()\n",
     "    train_input_tensor = torch.Tensor(train_input_tensor)\n",
-    "    train_input_tensor = normalize(train_input_tensor)\n",
+    "    # train_input_tensor = normalize(train_input_tensor)\n",
+    "    train_mean = torch.mean(train_input_tensor, dim=0)\n",
+    "    train_std = torch.std(train_input_tensor, dim=0)\n",
+    "    std_zeros = train_std == 0\n",
+    "    train_std[std_zeros] = 1\n",
+    "    train_input_tensor = (train_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "    # test_input_tensor\n",
     "    test_input_tensor = test_inputs_df.iloc[:, 1:].to_numpy()\n",
     "    test_input_tensor = torch.Tensor(test_input_tensor)\n",
-    "    test_input_tensor = normalize(test_input_tensor)\n",
+    "    # test_input_tensor = normalize(test_input_tensor)\n",
+    "    test_input_tensor = (test_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
     "\n",
     "    # output tensor\n",
     "    targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
@@ -231,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
