--- a/figures/0.get_plot_acc.ipynb
+++ b/figures/0.get_plot_acc.ipynb
@@ -17,11 +17,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_detailed   = pd.read_csv('../acc_rate_csvs/detailed.csv')\n",
+    "df_detailed = pd.read_csv('../acc_rate_csvs/detailed.csv')\n",
+    "df_detailed = df_detailed[~df_detailed['method'].isin(['BIC.1', 'mmit.1', 'mmit.2', 'mmit.4'])]\n",
     "df_detailed['dataset'] = ' detailed \\n N = 3730'\n",
+    "\n",
     "df_systematic = pd.read_csv('../acc_rate_csvs/systematic.csv')\n",
+    "df_systematic = df_systematic[~df_systematic['method'].isin(['BIC.1', 'mmit.1', 'mmit.2'])]\n",
     "df_systematic['dataset'] = ' systematic \\n N = 3418'\n",
+    "\n",
     "df_epigenomic = pd.read_csv('../acc_rate_csvs/epigenomic.csv')\n",
+    "df_epigenomic = df_epigenomic[~df_epigenomic['method'].isin(['BIC.1', 'mmit.117'])]\n",
     "df_epigenomic['dataset'] = 'epigenomic \\n N = 4913'\n",
     "df = pd.concat([df_detailed, df_epigenomic, df_systematic, ])\n",
     "\n",
@@ -104,7 +109,7 @@
     "                 guides(color=guide_legend(title=\"method\"))  # Manual legend\n",
     "                 )\n",
     "\n",
-    "# plot_combined.show()"
+    "plot_combined.show()"
    ]
   },
   {
@@ -134,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
