update epigenomic acc

--- a/1.linear/linear_L1reg/linear_L1reg.ipynb
+++ b/1.linear/linear_L1reg/linear_L1reg.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# choosing training data\n",
-    "dataset <- \"detailed\""
+    "dataset <- \"epigenomic\""
    ]
   },
   {
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# read data\n",
-    "feature.dt <- fread(paste(\"../../training_data/\", dataset, \"/inputs_full.csv\", sep = \"\"))\n",
+    "feature.dt <- fread(paste(\"../../training_data/\", dataset, \"/inputs_old.csv\", sep = \"\"))\n",
     "target.dt  <- fread(paste(\"../../training_data/\", dataset, \"/outputs.csv\", sep = \"\"))\n",
     "folds.dt   <- fread(paste(\"../../training_data/\", dataset, \"/folds.csv\", sep = \"\"))"
    ]
@@ -100,10 +100,30 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "6"
+      ],
+      "text/latex": [
+       "6"
+      ],
+      "text/markdown": [
+       "6"
+      ],
+      "text/plain": [
+       "[1] 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# get number of folds\n",
-    "n_folds = dim(unique(folds.dt[,\"fold\"]))[1]"
+    "n_folds = dim(unique(folds.dt[,\"fold\"]))[1]\n",
+    "n_folds"
    ]
   },
   {
