--- a/1.linear/linear_unreg/linear_unreg.ipynb
+++ b/1.linear/linear_unreg/linear_unreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# choosing training data\n",
-    "dataset <- \"detailed\"\n",
+    "dataset <- \"epigenomic\"\n",
     "\n",
     "# features engineering functions\n",
     "f1 <- function(x) log((x))\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -66,14 +66,14 @@
    "outputs": [],
    "source": [
     "# read data\n",
-    "feature.dt <- fread(paste(\"../../training_data/\", dataset, \"/inputs_chosen.csv\", sep = \"\"))\n",
+    "feature.dt <- fread(paste(\"../../training_data/\", dataset, \"/inputs.csv\", sep = \"\"))\n",
     "target.dt  <- fread(paste(\"../../training_data/\", dataset, \"/outputs.csv\", sep = \"\"))\n",
     "folds.dt   <- fread(paste(\"../../training_data/\", dataset, \"/folds.csv\", sep = \"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "r"
