--- a/get_acc_from_R_predictions.ipynb
+++ b/get_acc_from_R_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,32 +14,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = \"epigenomic\"\n",
-    "model = \"linear_unreg\""
+    "model = \"linear_L1reg\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get number of folds\n",
     "fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
-    "n_folds = np.unique(fold_df['fold']).__len__()"
+    "n_folds = np.unique(fold_df['fold']).__len__()\n",
+    "n_folds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_folder_path = 'models/' + model + '/predictions/'\n",
+    "prediction_folder_path = '1.linear/' + model + '/predictions/'\n",
     "\n",
     "# List all files in the folder\n",
     "file_names = os.listdir(prediction_folder_path)\n",
@@ -54,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +74,13 @@
     "    evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
     "    fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
     "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    lldas_df = pd.read_csv('models/' + model + '/predictions/.' + dataset + '.' + str(test_fold) + '.' + str(n_feature) + '.csv')\n",
+    "    lldas_df = pd.read_csv('1.linear/' + model + '/predictions/.' + dataset + '.' + str(test_fold) + '.' + str(n_feature) + '.csv')\n",
     "    return get_acc(eval_df, lldas_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
