--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,39 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x266aaaa7290>"
+       "<torch._C.Generator at 0x2548b48f230>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seed_value = 123\n",
+    "seed_value = 123456789\n",
     "np.random.seed(seed_value)\n",
     "torch.manual_seed(seed_value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'detailed'"
+    "dataset = 'systematic'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# main\n",
+    "for test_fold in range(1, n_fold+1):\n",
+    "    for chosen_features, feature_engineer in zip([['length', 'variance', 'range_value', 'sum_diff', 'unique_count', 'autocorr']],\n",
+    "                                                 [[loglog, log, log, loglog, log, identity]]):\n",
+    "\n",
+    "        # fold dataframe\n",
+    "        train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
+    "\n",
+    "        # train_input_tensor\n",
+    "        train_input_tensor = train_inputs_df[chosen_features].to_numpy()\n",
+    "        for i in range(len(feature_engineer)):\n",
+    "            train_input_tensor[:, i] = feature_engineer[i](train_input_tensor[:, i])\n",
+    "        train_input_tensor = torch.Tensor(train_input_tensor)\n",
+    "        # train_mean = torch.mean(train_input_tensor, dim=0)\n",
+    "        # train_std = torch.std(train_input_tensor, dim=0)\n",
+    "        # std_zeros = train_std == 0\n",
+    "        # train_std[std_zeros] = 1\n",
+    "        # train_input_tensor = (train_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
+    "\n",
+    "        # test_input_tensor\n",
+    "        test_input_tensor = test_inputs_df[chosen_features].to_numpy()\n",
+    "        for i in range(len(feature_engineer)):\n",
+    "            test_input_tensor[:, i] = feature_engineer[i](test_input_tensor[:, i])\n",
+    "        test_input_tensor = torch.Tensor(test_input_tensor)\n",
+    "        # test_input_tensor = (test_input_tensor - train_mean) / train_std.unsqueeze(0)\n",
+    "\n",
+    "        # output tensor\n",
+    "        targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
+    "        targets_high = torch.Tensor(train_outputs_df['max.log.lambda'].to_numpy().reshape(-1,1))\n",
+    "        outputs_tensor = torch.cat((targets_low, targets_high), dim=1)\n",
+    "\n",
+    "        # trained model\n",
+    "        hidden_layers, hidden_size = chose_best_architect(cv_df, test_fold, len(chosen_features))\n",
+    "        trained_model = get_trained_model(train_input_tensor, outputs_tensor, hidden_layers, hidden_size)\n",
+    "        \n",
+    "        # get acc\n",
+    "        with torch.no_grad():\n",
+    "            lldas = trained_model(test_input_tensor).numpy().reshape(-1)\n",
+    "\n",
+    "        lldas_df = pd.DataFrame(list(zip(test_inputs_df['sequenceID'], lldas)), columns=['sequenceID', 'llda'])\n",
+    "        acc = get_acc(test_eval_df, lldas_df)\n",
+    "        add_row_to_csv('acc_rate_csvs/' + dataset + '.csv', \n",
+    "                    ['method', 'fold', 'feature engineer', 'acc'],\n",
+    "                    ['mlp.' + str(len(chosen_features)), test_fold, 'yes', acc])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# main\n",
     "for test_fold in range(1, n_fold+1):\n",
-    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff']],\n",
-    "                                                 [[loglog],   [loglog, log],       [loglog, log, log, loglog]]):\n",
+    "    for chosen_features, feature_engineer in zip([['length'], ['length', 'variance'], ['length', 'variance', 'range_value', 'sum_diff'], ['length', 'variance', 'range_value', 'sum_diff', 'unique_count', 'autocorr']],\n",
+    "                                                 [[loglog],   [loglog, log],          [loglog, log, log, loglog],                        [loglog, log, log, loglog, log, identity]]):\n",
     "\n",
     "        # fold dataframe\n",
     "        train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
