--- a/MLP_cv.ipynb
+++ b/MLP_cv.ipynb
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x1fc9bc8f210>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "seed_value = 123\n",
     "np.random.seed(seed_value)\n",
@@ -27,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dataset\n",
-    "dataset = 'epigenomic'"
+    "dataset = 'systematic'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +183,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# main\n",
+    "for test_fold in range(1, n_fold+1):\n",
+    "    for chosen_features, feature_engineer in zip([['length', 'variance', 'range_value', 'sum_diff', 'unique_count', 'autocorr']],\n",
+    "                                                 [[loglog, log, log, loglog, log, identity]]):\n",
+    "        for hidden_layers in [1, 2, 3, 4]:\n",
+    "            for hidden_size in [2, 4, 8, 16, 32, 64, 128, 256, 512]:\n",
+    "                # fold dataframe\n",
+    "                train_inputs_df, train_outputs_df, train_eval_df, test_inputs_df, test_eval_df = get_fold_dfs(test_fold, fold_split_df, inputs_df, outputs_df, evaluation_df)\n",
+    "\n",
+    "                # train_input_tensor\n",
+    "                train_input_tensor = train_inputs_df[chosen_features].to_numpy()\n",
+    "                for i in range(len(feature_engineer)):\n",
+    "                    train_input_tensor[:, i] = feature_engineer[i](train_input_tensor[:, i])\n",
+    "                train_input_tensor = torch.Tensor(train_input_tensor)\n",
+    "                # train_input_tensor = normalize(train_input_tensor)\n",
+    "\n",
+    "                # test_input_tensor\n",
+    "                test_input_tensor = test_inputs_df[chosen_features].to_numpy()\n",
+    "                for i in range(len(feature_engineer)):\n",
+    "                    test_input_tensor[:, i] = feature_engineer[i](test_input_tensor[:, i])\n",
+    "                test_input_tensor = torch.Tensor(test_input_tensor)\n",
+    "                # test_input_tensor = normalize(test_input_tensor)\n",
+    "\n",
+    "                # output tensor\n",
+    "                targets_low  = torch.Tensor(train_outputs_df['min.log.lambda'].to_numpy().reshape(-1,1))\n",
+    "                targets_high = torch.Tensor(train_outputs_df['max.log.lambda'].to_numpy().reshape(-1,1))\n",
+    "                outputs_tensor = torch.cat((targets_low, targets_high), dim=1)\n",
+    "\n",
+    "                # trained model\n",
+    "                trained_model = get_trained_model(train_input_tensor, outputs_tensor, hidden_layers, hidden_size)\n",
+    "                \n",
+    "                # get acc\n",
+    "                with torch.no_grad():\n",
+    "                    lldas = trained_model(test_input_tensor).numpy().reshape(-1)\n",
+    "\n",
+    "                lldas_df = pd.DataFrame(list(zip(test_inputs_df['sequenceID'], lldas)), columns=['sequenceID', 'llda'])\n",
+    "                acc = get_acc(test_eval_df, lldas_df)\n",
+    "                add_row_to_csv('acc_rate_csvs/' + dataset + '_cv.csv', \n",
+    "                            ['n_features',             'fold',     'feature engineer', 'n_layer',      'layer_size',  'val_acc'],\n",
+    "                            [str(len(chosen_features)), test_fold, 'yes',               hidden_layers,  hidden_size,   acc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
