--- a/model/mlp/mlp.ipynb
+++ b/model/mlp/mlp.ipynb
@@ -80,30 +80,19 @@
     "    X_train = X_train[valid_rows]\n",
     "    y_train = y_train[valid_rows].to_numpy()\n",
     "\n",
-    "    y_pred = mlp_train_and_predict(X_train, X_test, y_train)\n",
-    "    return y_pred"
+    "    y_pred, best_params_ = mlp_train_and_predict(X_train, X_test, y_train)\n",
+    "    return y_pred, best_params_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nguye\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\nguye\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train and predict for both lower and upper models\n",
-    "lda_lower_pred = train_model('lower', 'min.log.lambda')\n",
-    "lda_upper_pred = train_model('upper', 'max.log.lambda')\n",
+    "lda_lower_pred, best_params_lower = train_model('lower', 'min.log.lambda')\n",
+    "lda_upper_pred, best_params_upper = train_model('upper', 'max.log.lambda')\n",
     "\n",
     "# Calculate and return the average vector\n",
     "pred_lldas = (lda_lower_pred + lda_upper_pred) / 2"
@@ -126,6 +115,46 @@
    "source": [
     "lldas_df = pd.DataFrame(list(zip(features_df_test['sequenceID'], pred_lldas)), columns=['sequenceID', 'llda'])\n",
     "lldas_df.to_csv(f'predictions/{category}.{dataset}.{test_fold}.{len(chosen_feature)}.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hidden_layer_sizes': (512,), 'max_iter': 1000}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params_lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hidden_layer_sizes': (64,), 'max_iter': 1000}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_params_upper"
    ]
   }
  ],
