make small changes

--- a/model/linear/linear_L1reg/linear_L1reg.ipynb
+++ b/model/linear/linear_L1reg/linear_L1reg.ipynb
@@ -76,7 +76,7 @@
     "    folds.dt   <- fread(paste(\"../../../training_data/\", dataset, \"/folds.csv\", sep = \"\"))\n",
     "    \n",
     "    # get number of folds\n",
-    "    n_folds = dim(unique(folds.dt[,\"fold\"]))[1]\n",
+    "    n_folds <- dim(unique(folds.dt[,\"fold\"]))[1]\n",
     "    \n",
     "    # filter censored intervals\n",
     "    target.dt  <- target.dt[!(min.log.lambda == -Inf & max.log.lambda == Inf)]\n",
