--- a/get_acc_from_predictions.ipynb
+++ b/get_acc_from_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,28 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category = 'previous'\n",
-    "model = \"linear_chosen_feature\""
+    "category = 'proposed'\n",
+    "model = \"mlp\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "folder_path = 'training_data'\n",
     "datasets = [name for name in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, name))]\n",
-    "datasets = ['H3K27ac-H3K4me3_TDHAM_BP']"
+    "datasets = ['detailed']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,28 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 1, n_feature 3: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.1.3.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 1, n_feature 8: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.1.8.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 1, n_feature 9: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.1.9.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 2, n_feature 3: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.2.3.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 2, n_feature 8: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.2.8.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 2, n_feature 9: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.2.9.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 3, n_feature 3: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.3.3.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 3, n_feature 8: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.3.8.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 3, n_feature 9: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.3.9.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 4, n_feature 3: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.4.3.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 4, n_feature 8: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.4.8.csv'\n",
-      "Error calculating accuracy for dataset H3K27ac-H3K4me3_TDHAM_BP, fold 4, n_feature 9: [Errno 2] No such file or directory: 'model/linear_chosen_feature/predictions/previous.H3K27ac-H3K4me3_TDHAM_BP.4.9.csv'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for dataset in datasets:\n",
     "    # get number of folds\n",
