--- a/get_acc_from_predictions.ipynb
+++ b/get_acc_from_predictions.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "folder_path = 'training_data'\n",
     "datasets = [name for name in os.listdir(folder_path) if os.path.isdir(os.path.join(folder_path, name))]\n",
-    "datasets = ['detailed']"
+    "# datasets = ['detailed']"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
