--- a/get_acc_from_R_predictions.ipynb
+++ b/get_acc_from_R_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,44 +14,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = \"epigenomic\"\n",
-    "model = \"linear_L1reg\""
+    "model = \"aft_xgboost\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get number of folds\n",
-    "fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
-    "n_folds = np.unique(fold_df['fold']).__len__()\n",
-    "n_folds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_folder_path = '1.linear/' + model + '/predictions/'\n",
+    "# get number of folds\n",
+    "fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
+    "n_folds = np.unique(fold_df['fold']).__len__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_folder_path = model + '/predictions/'\n",
     "\n",
     "# List all files in the folder\n",
     "file_names = os.listdir(prediction_folder_path)\n",
@@ -66,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,13 +62,13 @@
     "    evaluation_df = pd.read_csv('training_data/' + dataset + '/evaluation.csv')\n",
     "    fold_df = pd.read_csv('training_data/' + dataset + '/folds.csv')\n",
     "    eval_df = evaluation_df[evaluation_df['sequenceID'].isin(fold_df[fold_df['fold'] == test_fold]['sequenceID'])]\n",
-    "    lldas_df = pd.read_csv('1.linear/' + model + '/predictions/.' + dataset + '.' + str(test_fold) + '.' + str(n_feature) + '.csv')\n",
+    "    lldas_df = pd.read_csv(model + '/predictions/' + dataset + '.' + str(test_fold) + '.' + str(n_feature) + '.csv')\n",
     "    return get_acc(eval_df, lldas_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
