--- a/aft_xgboost/aft.ipynb
+++ b/aft_xgboost/aft.ipynb
@@ -318,6 +318,17 @@
     }
    ],
    "source": [
+    "# Define hyperparameter grid\n",
+    "param_grid = {\n",
+    "    'learning_rate': [0.001, 0.01, 0.1, 1.0],\n",
+    "    'max_depth': [2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
+    "    'min_child_weight': [0.001, 0.1, 1.0, 10.0, 100.0],\n",
+    "    'reg_alpha': [0.001, 0.01, 0.1, 1.0, 10.0, 100.0],\n",
+    "    'reg_lambda': [0.001, 0.01, 0.1, 1.0, 10.0, 100.0],\n",
+    "    'aft_loss_distribution_scale': [0.5, 0.8, 1.1, 1.4, 1.7, 2.0]\n",
+    "}\n",
+    "\n",
+    "# Loop through datasets\n",
     "for dataset in datasets:\n",
     "    # Load data\n",
     "    folds_df = pd.read_csv(f'../training_data/{dataset}/folds.csv')\n",
@@ -325,18 +336,6 @@
     "    target_df = pd.read_csv(f'../training_data/{dataset}/outputs.csv')\n",
     "\n",
     "    for test_fold in range(1, np.unique(folds_df['fold']).__len__() + 1):\n",
-    "        # Split data into training and test sets\n",
-    "        train_ids = folds_df[folds_df['fold'] != test_fold]['sequenceID']\n",
-    "        test_ids = folds_df[folds_df['fold'] == test_fold]['sequenceID']\n",
-    "\n",
-    "        features_df_train = features_df[features_df['sequenceID'].isin(train_ids)]\n",
-    "        features_df_test = features_df[features_df['sequenceID'].isin(test_ids)]\n",
-    "        target_df_train = target_df[target_df['sequenceID'].isin(train_ids)]\n",
-    "\n",
-    "        # Create X_train and X_test\n",
-    "        X_train = features_df_train[chosen_feature].to_numpy()\n",
-    "        X_test = features_df_test[chosen_feature].to_numpy()\n",
-    "\n",
     "        # Split data into training and test sets\n",
     "        train_ids = folds_df[folds_df['fold'] != test_fold]['sequenceID']\n",
     "        test_ids = folds_df[folds_df['fold'] == test_fold]['sequenceID']\n",
@@ -358,35 +357,52 @@
     "        dtrain.set_float_info('label_lower_bound', y_lower_bound)\n",
     "        dtrain.set_float_info('label_upper_bound', y_upper_bound)\n",
     "\n",
-    "        # Split a portion of the training data for validation\n",
-    "        num_train = len(X_train)\n",
-    "        split_index = int(0.8 * num_train)  # 80% training, 20% validation\n",
-    "        dtrain_train = xgb.DMatrix(X_train[:split_index])\n",
-    "        dtrain_train.set_float_info('label_lower_bound', y_lower_bound[:split_index])\n",
-    "        dtrain_train.set_float_info('label_upper_bound', y_upper_bound[:split_index])\n",
+    "        # Cross-validation for hyperparameter tuning\n",
+    "        best_params = None\n",
+    "        best_score = float('inf')\n",
     "\n",
-    "        dtrain_valid = xgb.DMatrix(X_train[split_index:])\n",
-    "        dtrain_valid.set_float_info('label_lower_bound', y_lower_bound[split_index:])\n",
-    "        dtrain_valid.set_float_info('label_upper_bound', y_upper_bound[split_index:])\n",
+    "        for learning_rate in param_grid['learning_rate']:\n",
+    "            for max_depth in param_grid['max_depth']:\n",
+    "                for min_child_weight in param_grid['min_child_weight']:\n",
+    "                    for reg_alpha in param_grid['reg_alpha']:\n",
+    "                        for reg_lambda in param_grid['reg_lambda']:\n",
+    "                            for aft_loss_distribution_scale in param_grid['aft_loss_distribution_scale']:\n",
+    "                                params = {\n",
+    "                                    'objective': 'survival:aft',\n",
+    "                                    'eval_metric': 'aft-nloglik',\n",
+    "                                    'aft_loss_distribution': 'normal',\n",
+    "                                    'aft_loss_distribution_scale': aft_loss_distribution_scale,\n",
+    "                                    'tree_method': 'hist',\n",
+    "                                    'learning_rate': learning_rate,\n",
+    "                                    'max_depth': max_depth,\n",
+    "                                    'min_child_weight': min_child_weight,\n",
+    "                                    'reg_alpha': reg_alpha,\n",
+    "                                    'reg_lambda': reg_lambda\n",
+    "                                }\n",
     "\n",
-    "        # Define model parameters\n",
-    "        params = {\n",
-    "            'objective': 'survival:aft',\n",
-    "            'eval_metric': 'aft-nloglik',\n",
-    "            'aft_loss_distribution': 'normal',\n",
-    "            'aft_loss_distribution_scale': 1,\n",
-    "            'tree_method': 'hist',\n",
-    "            'learning_rate': 0.01,\n",
-    "            'max_depth': 8\n",
-    "        }\n",
+    "                                # Perform cross-validation\n",
+    "                                cv_results = xgb.cv(\n",
+    "                                    params,\n",
+    "                                    dtrain,\n",
+    "                                    num_boost_round=10000,\n",
+    "                                    nfold=2,\n",
+    "                                    metrics='aft-nloglik',\n",
+    "                                    seed=42,\n",
+    "                                    early_stopping_rounds=1000,\n",
+    "                                    verbose_eval=False\n",
+    "                                )\n",
     "\n",
-    "        # Train the model\n",
+    "                                # Check for the best score\n",
+    "                                mean_score = cv_results['test-aft-nloglik-mean'].min()\n",
+    "                                if mean_score < best_score:\n",
+    "                                    best_score = mean_score\n",
+    "                                    best_params = params\n",
+    "\n",
+    "        # Train the model with the best parameters\n",
     "        bst = xgb.train(\n",
-    "            params, \n",
-    "            dtrain_train, \n",
-    "            num_boost_round=10000, \n",
-    "            evals=[(dtrain_train, 'train'), (dtrain_valid, 'valid')],\n",
-    "            early_stopping_rounds=1000,\n",
+    "            best_params,\n",
+    "            dtrain,\n",
+    "            num_boost_round=10000,\n",
     "            verbose_eval=100\n",
     "        )\n",
     "\n",
